--- a/gaze.html
+++ b/gaze.html
@@ -1,5 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8" />
 		<script type="text/javascript" src="bessel.js"></script>
 		<script type="text/javascript" src="Airy.js"></script>
 		<!--
