--- a/gaze.html
+++ b/gaze.html
@@ -1319,7 +1319,7 @@ class Airy(object):
 			></canvas>
 		</td><td width="100%">
 			<table>
-			<tr><td class="info">
+			<tr><td class="info" valign="top">
 				<big><b>Controls</b></big>
 				<form style="display:inline-block;">
 					<button id="axes" onclick="buttonAxes()">
@@ -1333,6 +1333,7 @@ class Airy(object):
 					</button>
 				</form>
 				Pupil:
+				<big>
 				<table style="display:inline-block;"><tr>
 						<td      onmouseover="enter(event)"
 								 onmouseout="leave(event)"
@@ -1360,6 +1361,7 @@ class Airy(object):
 								 onclick="clickPupil(8)">8
 						</td>
 				</tr><table>
+				</big>
 			</td></tr><tr><td class="info">
 				<big><b>Scenario</b></big>
 				<select id="figure 1a menu" onchange="selectScenario()">
